--- a/src/test/resources/application-it.properties
+++ b/src/test/resources/application-it.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/rockstar_springboot_exerc
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=mderuijter
 spring.datasource.password=bad-password
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
